# commerce-agent

./: .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
data/: catalog.json
db/: README.md
db/migrations/: 0001_initial_schema.sql  0002_embedding_dimension_1024.sql  0003_embedding_dimension_2048.sql  0004_embedding_dimension_1024_hnsw.sql
db/seeds/: public_seed_50.json  tiny_seed.json
devtools/: __init__.py
devtools/evalbench/: README.md  __init__.py  runner.py
devtools/evalbench/cases/: e2e.jsonl  image.jsonl  multimodal.jsonl  router.jsonl  text.jsonl
docs/: database-design.md  database-design.zh-CN.md  seed-data-plan.md
scripts/: check_db_write_policy.py
src/commerce_agent/: __init__.py  agent.py  api_models.py  catalog.py  chat_responder.py  cli.py  config.py  db_write.py  db_write_policy.py  deploy.py  embeddings.py  env.py  ids.py  models.py  repository.py  router.py  search_parser.py  search_responder.py  seed_data.py  tools.py  vision.py  web.py
tests/: conftest.py  router_cases.json  test_agent.py  test_db_write_policy.py  test_embeddings.py  test_evalbench.py  test_ids.py  test_router.py  test_search_parser.py  test_seed_data.py  test_web.py
web/: debug.html  index.html  product.html
web/assets/: app.js  debug.js  product.js  styles.css
