[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "commerce-agent"
version = "0.1.0"
description = "A commerce agent with chat, text search, image search, and a web UI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.0.0",
  "psycopg[binary]>=3.2.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.0"
]

[project.scripts]
commerce-agent = "commerce_agent.cli:main"
commerce-agent-web = "commerce_agent.web:main"
commerce-agent-build-tiny-seed = "commerce_agent.seed_data:build_tiny_seed_cli"
commerce-agent-load-seed = "commerce_agent.seed_data:load_seed_data_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
